--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
    
     <title>Michael Napolitano</title>
   </head>
-  <body class="bg-gray-300">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
    
